--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4,7 +4,7 @@
   padding: 0;
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 section{
@@ -18,20 +18,20 @@ section{
   color: #fff;
   background: #929292;
 }
-.wrapper{
-  background: #fff;
+.main{
+  background: rgb(216, 216, 216);
   border-radius: 15px;
   padding: 25px;
   max-width: 380px;
   width: 100%;
   box-shadow: 0px 5px 10px rgba(0,0,0,0.1);
 }
-.wrapper header{
+.main header{
   font-size: 22px;
-  font-weight: 600;
+  font-weight: 400;
 }
-.wrapper .poll-area{
-  margin: 20px 0 15px 0;
+.main .poll-area{
+  margin: 15px 0 10px 0;
 }
 .poll-area label{
   display: block;
@@ -89,7 +89,7 @@ label.selected .row .circle::after{
 }
 label .row span{
   font-size: 16px;
-  font-weight: 500;
+  font-weight: 400;
 }
 label .row .percent{
   display: none;
@@ -205,7 +205,7 @@ li a {
     resize: vertical;
     box-sizing: border-box;
     padding: 12px;
-    font-size: 5px;
+    font-size: 8px;
 }
 
 button{
@@ -215,9 +215,11 @@ button{
     resize: vertical;
     box-sizing: border-box;
     padding: 12px;
-    font-size: 15px;
+    font-size: 20px;
     background-color:#109987;
     cursor: pointer;
+    font-weight: 200;
+    color: white;
 }
 
 
@@ -259,4 +261,105 @@ button{
 
 .closebtn:hover {
     color: black;
+}
+
+.wrapper{
+  width: 320px;
+  height: 100%;
+  background: #fff;
+  border-radius: 15px;
+  padding: 30px 30px 25px;
+  box-shadow: 0 12px 35px rgba(0,0,0,0.1);
+}
+header, .content :where(i, p, span){
+  color: #202842;
+}
+.wrapper header{
+  font-size: 35px;
+  font-weight: 600;
+  text-align: center;
+}
+.wrapper .content{
+  margin: 15px 0;
+}
+.content .quote-area{
+  display: flex;
+  justify-content: center;
+}
+.quote-area i{
+  font-size: 15px;
+}
+.quote-area i:first-child{
+  margin: 3px 10px 0 0;
+}
+.quote-area i:last-child{
+  display: flex;
+  margin: 0 0 3px 10px;
+  align-items: flex-end;
+}
+.quote-area .quote{
+  font-size: 22px;
+  text-align: center;
+  word-break: break-all;
+}
+.content .author{
+  display: flex;
+  font-size: 18px;
+  margin-top: 10px;
+  font-style: italic;
+  justify-content: flex-end;
+}
+.author span:first-child{
+  margin: -7px 5px 0 0;
+  font-family: monospace;
+}
+.wrapper .buttons{
+  border-top: 1px solid #ccc;
+}
+.buttons .features{
+  display: flex;
+  margin-top: 20px;
+  align-items: center;
+  justify-content: space-between;
+}
+.features ul{
+  display: flex;
+}
+.features ul li{
+  margin: 5px 5px;
+  height: 40px;
+  width: 40px;
+  display: flex;
+  cursor: pointer;
+  color: #44ec8a;
+  list-style: none;
+  border-radius: 50%;
+  align-items: center;
+  justify-content: center;
+  border: 2px solid #44ec8a;
+  transition: all 0.3s ease;
+}
+.features ul li:first-child{
+  margin-left: 0;
+}
+ul li:is(:hover, .active){
+  color: #fff;
+  background: #44ec8a;
+}
+ul .speech.active{
+  pointer-events: none;
+}
+.buttons button{
+  border: none;
+  color: #fff;
+  outline: none;
+  font-size: 16px;
+  cursor: pointer;
+  padding: 13px 22px;
+  border-radius: 30px;
+  background: #44ec8a;
+}
+.buttons button.loading{
+  opacity: 0.7;
+  pointer-events: none;
 }
